D9-ArgoCD-Kustomize-adv-deployment/Lab3-Kustomize/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-demo

spec:

  template:

    metadata:

      labels:

        environment: dev

    spec:

      containers:

      - name: nginx

        image: nginx:1.27
