D9-ArgoCD-Kustomize-adv-deployment/Lab3-Kustomize/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-demo

spec:

  rules:

  - host: dev-gitops-student-31.lab.local
